# online_store

./: .env.sample  data.json  data1.json  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_material_author.py
blog/templates/blog/: material_confirm_delete.html  material_detail.html  material_form.html  material_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_version.py
catalog/templates/catalog/: assortment_list.html  base.html  contact.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_products.html
catalog/templatetags/: my_tags.py
config/: settings.py
users/: admin.py  forms.py  models.py  services.py  views.py
users/management/commands/: createSuperuser.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
